--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,12 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
-
+  <repositories>
+      <repository>
+          <id>central</id>
+          <url>https://repo.maven.apache.org/maven2</url>
+      </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
