--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.uax.devops</groupId>
   <artifactId>demo-web-project</artifactId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <packaging>war</packaging>
 
   <name>demo-web-project Maven Webapp</name>
